feat: add 003-letter and 004-letter

--- a/postgraduate/word/simple-word/markdown/p6-p8.md
+++ b/postgraduate/word/simple-word/markdown/p6-p8.md
@@ -3,7 +3,7 @@
     - adv. 在末期: in late April 2009
     - adj. 已故的: The late psychologist Nalini Ambady.
     - latter adj. 后者的 n. 后者
-    - lately adv. 最近，不久前: Reseachers lately have begun to extend(表达) that forecast.
+    - lately adv. 最近，不久前: Researchers lately have begun to extend(表达) that forecast.
 - future
     - pl. 期货 
 - why
@@ -42,7 +42,7 @@
     - option
 - parent
 - past
-    - adj. 过去的: over the pase decade
+    - adj. 过去的: over the past decade
     - n. 过去: CEO Pay: Past and Present
     - adv./prep. 经过: I must have driven past that place thousands of times.
 - money
@@ -88,14 +88,14 @@
 - lose
     - lost, lost, losing
     - lose sleep 对...焦虑: One more reason not to lose sleep over the rise in oil prices.
-    - lose concentration 走神: lose concentration on the dirving
+    - lose concentration 走神: lose concentration on the driving
     - loss n. (class, chess, boss) 丧失，损失
     - loser n. 败者，输者
 - role
-    - play a role in 在...方面: Foreigh bureaus(外国办事处) play a crucial role in the newspaper business.
+    - play a role in 在...方面: Foreign bureaus(外国办事处) play a crucial role in the newspaper business.
 - college
 - essay
-    - n. 散文: Write an essay of 160-200 words beased on the following drawing.
+    - n. 散文: Write an essay of 160-200 words based on the following drawing.
 - person
     - a person, two persons
 - whatever
@@ -109,7 +109,7 @@
     - **adj./adv. 努力的**: Everyone should try hand to promote social justice.
     - adj./adv. 猛烈的: But because hard laughter is difficult to maintain...
 - play
-    - n. 竞争: That once could count on(依赖，指望) hand work and fair play.
+    - n. 竞争: That once could count on(依赖，指望) hard work and fair play.
     - n. 戏剧: musical play
 - themselves
 - translation
@@ -117,7 +117,7 @@
     - translate
 - area
 - paper
-    - newpaper 报纸
+    - newspaper 报纸
     - n. 纸(不可数)
     - **n. 论文(可数)**
 - allow
@@ -128,15 +128,15 @@
     - openness n. 率真，坦率
 - **though**
     - conj. 尽管，虽然(在主句前补充“但是”): Though it is sunny, it is cold.
-            - although conj. 尽管，虽然
+      - although conj. 尽管，虽然
     - adv. 可是，然而(只用于句末，使用逗号隔开): Such programs do not have to negatively affect the environment, though.
 - under
 - name
-    - vt. 提名: The likeihood of being named also increases.
+    - vt. 提名: The likelihood of being named also increases.
 - class
     - n. 课程(一节课，course 一门课, curriculum 完整课程体系)
     - **n. 阶级，等级**: social class, middle class
-    - **v. 分等级**: It can hardly be classed as Lierature.
+    - **v. 分等级**: It can hardly be classed as Literature.
     - classic adj. 典型的 n. 典型: a classic case of "paralysis by analysis"
     - classical adj. 经典的，古典的: It has been the talk of the classical-music world.
 - low
@@ -172,7 +172,7 @@
     - v. (使)联合，团结: United we stand, divided we fall.
 - enough
     - 前面+adj.后面+n.(前行候命): enough food,
-        - The program has provided though food and medicine...
+        - The program has provided enough food and medicine...
         - Renewable energy is not competitive enough.
 - list
     - n.: from the list A-G.
@@ -184,7 +184,7 @@
 - draw
     - vt. 拖，拉:
     - vt. 吸引（注意等） 
-        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successed in science.
+        - draw attention to 关注: They want to use their wealth(财富) to draw attention to those who have successes in science.
 - easy
     - adj. 安逸的
         - uneasy 不安
@@ -217,10 +217,10 @@
 - my
 - theory
     - theme + story
-    - n.: There are no good theories explaining what consciousness(意识) actually is and how you could ever build a mechine to ge there.
+    - n.: There are no good theories explaining what consciousness(意识) actually is and how you could ever build a machine to ge there.
 - friend
-- latter
-- mechine
+- letter
+- machine
 - newspaper
 - tell
     - told, told
@@ -251,7 +251,7 @@
 - title
     - n. 标题，头衔
     - entitle v. 使享有权利，给...命名
-        - write an essay entitled "Cultures Natinal and International"
+        - write an essay entitled "Cultures National and International"
         - be entitle to 有资格...: They are entitled be continuance.
 - car
 - fashion
@@ -265,7 +265,7 @@
 - news
 - ever
     - adv. 在任何时候(**永远**): We are never, ever getting back together.
-    - adv. 从来（**曾**）: Have you ever notices how much children laugh?
+    - adv. 从来（**曾**）: Have you ever notices how many children laugh?
     - adv. 在任何时候(**一直**): ...an ever-growing number of both domestic and international consumers.
         - an ever-growing number of 越来越多的 + 可数n.
             - an ever-growing amount of 越来越多的 + 不可数n.
@@ -290,9 +290,9 @@
 - sentence
     - n. 句子，判决
     - vt. 宣判，判决: He had already sentenced five or six other defendants(被告) only to forced community service on that day.
-- rencent
+- recent
     - adj.: This is why repeated measures(措施) have failed in recent years.
-    - rencently adv. 最近
+    - recently adv. 最近
 - second
     - num. 第二
     - n. 秒，瞬间
