--- a/postgraduate/word/simple-word/markdown/p9-p11.md
+++ b/postgraduate/word/simple-word/markdown/p9-p11.md
@@ -5,12 +5,12 @@
 - digital
     - adj. 数字的，数码的: digital device
     - digit n. 数字，**数位**（7位数）
-        - number 数量:         
-        - amount 数量
+        - number 数量(可数n.)         
+        - amount 数量(不可数n.)
         - The <u>number/amount/digit</u> of experiments is increasing.
 - fast
 - return
-    - 归还: Accepting favors in return for opening doors is "distasteful".
+    - 归还: Accepting favors(好处) in return for opening doors is "distasteful(令人厌恶的)".
     - 恢复: Train services have returned to normal after the strike of the flu.
     - n. pl. returns 收益: concrete returns for gift-givers
 - toward
@@ -44,7 +44,7 @@
     - ran, run, running
     - runner 
 - top
-    - n. 顶部，上不
+    - n. 顶部，上部
     - on **the** top
 - war
 - driver
@@ -54,7 +54,7 @@
     - officer n. 官员，*高级*职员: state officers
     - official 
         - adj. 官方的: maintain Catholicism(天主教) as the official religion.
-        - n. 官员: Official must not be allowed to play favorites.
+        - n. 官员: Official must not be allowed to play favorites. 官员不得偏袒
     - officially adv. 正式地，官方地
 - short
 - strong
@@ -82,9 +82,9 @@
     - adv. 整洁的，干净的: You should write nearly on the ANSWER SHEET.
 - next
 - already
-    - adv. 早已，已经: The French measures have already.
-    - still 正在做，进程中: I am still doing my homework.
-    - yet 还没有开始: I have not done my homework yet.
+    - adv. 早已，已经: The French measures have already. 法国的措施已经生效
+    - still 仍然(正在做，进程中): I am still doing my homework.
+    - yet adv. 还，尚未 conj. 然而，但是(还没有开始): I have not done my homework yet.
 - bank
     - banker n. 银行家
 - hand
@@ -94,8 +94,8 @@
 - middle
 - outside
 - reach
-    - vt. 触达: Influentials have moew channels to reach the public(公众).
-    - vi. 到达: We reach for them midlessly.
+    - vt. 触达: Influential have more channels to reach the public(公众). 
+    - vi. 到达: We reach for them mindlessly.
     - n. 范围: expanded the reach of science.
 - remember
 - simply
@@ -109,7 +109,7 @@
     - n. 训练，培养
     - train n. 火车 v. 训练，培养
 - action
-- beyoud
+- beyond
     - prep. 越出，远于: It is essential to consider factors beyond GDP.
 - full 
     - adj. 
@@ -139,15 +139,15 @@
 - clearly
     - adv. 清楚地
 - forget 
-    - you forget to pause and appreciate the things you have.
+    - you forget to pause and appreciate the things you have. 你忘记了停下来欣赏你所拥有的东西
 - general
     - adj. 普遍的，一般的
     - n. 将军
     - in general 一般而言: In general, nearly all the students feel good about the class.
 - together
-    - gather n./v. 聚集，集合: They gather all the data the can.
+    - gather n./v. 聚集，集合: They gather all the data the can. 他们收集了所有能收集到的数据
 - underline
-    - vt. 强调，使突出: President Trump had underline fossil fuels.
+    - vt. 强调，使突出: President Trump had underline <u>fossil fuels(化石燃料)</u>.
     - vt. 下划线: The underline sentence (Para.1) most probably shows that the court.
 - record
     - accord v. 自愿
@@ -164,13 +164,13 @@
 - robot
 - drug
     - n. 药物
-    - n. 毒品, 与 alcohol(酒精)/tobaccol(烟草) 连用
+    - n. 毒品, 与 alcohol(酒精)/tobacco(烟草) 连用
         - Many homeless adults are addicted to alcohol or drug.
 - event
     - n. 事件，大事 a thing that happens, especially sth **important**
     - event vs affair vs incident 事件
         - affair 同event
-        - incident sth that happens, especially sth unusual or **unpleasant**
+        - incident: sth that happens, especially sth unusual or **unpleasant**
 - here
 - lever
     - n. 杠杆 
@@ -244,7 +244,7 @@
 - gain
     - vt. 获得: no pain, no gain 不劳无获
     - vt. 增添: I had **gained weight(增重)** in the form of muscle mass...
-    - n. pl. gains 好处: to reap considerable gains.
+    - n. pl. gains 好处: to reap considerable gains. 以获得可观的收益
 - itself
 - light
     - n. 光，光线，灯
@@ -261,9 +261,9 @@
 - recently
     - adv. 最近: The Labour party(劳动党) had recently announced...
 - sound
-    - adj. 合理的，健全的: The court's rulling is legally sound.
+    - adj. 合理的，健全的: The court's ruling is legally sound. 法院的裁决在法律上是合理的
 - sport
-- televison/TV
+- television/TV
 - therefore
     - adv. 因此: Therefore, it is important to study(研究) humans.
 - usually
@@ -278,26 +278,26 @@
     - adv. 在对面
     - cross v. 
     - Look left and right before you across/cross the road.
-    - It helps spread Havaiian culture across/cross the world.
+    - It helps spread Hawaiian culture across/cross the world.
 - actually
 - billion
 - else
     - 只能放在不定代词(sb./anybody/anyone)和特殊疑问词后: Everybody else loses.
 - hear
     - hear from 收到...的信: I am looking forward to hearing from you.
-    - hear about/of 听说: What's this I hear about you getting merried?
+    - hear about/of 听说: What's this I hear about you getting married?
 - daily
 - due
     - adj. 到期的: interest due 到期利息
-    - adj. 应得的，应支付的: Information protection should be given due attention.
-    - **due to == because of 由于**: a rise in airline travel due to the improving economy and low oil price.
+    - adj. 应得的，应支付的: Information protection should be given due attention. 信息保护应得到应有的重视
+    - **due to == because of 由于**: a rise in airline travel due to the improving economy and low oil price. 经济好转和油价低迷导致航空旅行增加
 - key
     - The key to reforming(改革) higher education(高等教育)...
     - adj. 主要的
     - vt.: key in 键入
         - lets visitors key in job criteria.
 - material
-    - n. 材料，原料，素材: They were built with materials popular at that time.
+    - n. 材料，原料，素材: They were built with materials popular at that time. 它们是用当时流行的材料建造的
     - adj. 物质的，重要的: Satisfaction with these material purchases wears off fairly quickly.
 - push
 - shop
@@ -309,6 +309,6 @@
     - prep. （两者之中）任何一个: You may take either of the two.
         - neither 两者都不
 - mother
-- suprise
+- surprise
     - surprisingly adv. 惊人地
 - writer
