--- a/postgraduate/write/001-020_letter.md
+++ b/postgraduate/write/001-020_letter.md
@@ -1,35 +1,46 @@
 ## 002
 
-Dear Bob,
-    I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm reception in the culturl exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful memories in my life.
-    I remember you metioned wanting to travel in China. Well, if you come to China, You will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.
-    Please give my best regards to your family.
+Dear Bob,<br>
+&emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write a letter to you to thank you for your warm reception in the culturl exchange program. You and your family left a deep impression upon me. Indeed, the program is one of the most wonderful memories in my life.<br>
+&emsp;&emsp;&emsp;&emsp;I remember you mentioned wanting to travel in China. Well, if you come to China, You will be warmly welcomed, and it will be my pleasure to be your guide here. If you would like, send me a list beforehand of the places you would like to visit.<br>
+&emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
 
 ## 003 
 
-Dear friends,<br/>
-    On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend our heartfelt welcome to all the overseas students who will study in our university.<br/>
-    It is my great pleasure to offer you several practical suggestions. In the first place, life is this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes, abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br/>
-    All in all, although there is a lot of pressure, the time you spend on our campus will be worththile and enhance your whole life. Hope you like it here.
+Dear friends,<br>
+&emsp;&emsp;&emsp;&emsp;On behalf of the Students' Union of Beijing Foreign Studies University, I would like to extend our heartfelt welcome to all the overseas students who will study in our university.<br>
+&emsp;&emsp;&emsp;&emsp;It is my great pleasure to offer you several practical suggestions. In the first place, life is this prestigious university is perhaps not as easy as you have expected. You may be tightly bound by daily classes, abundant homework and frequent exams. Thus, be prepared for the hectic life here. In the second place, in spite of all those burdens, various extracurricular activities such as sports meets, speech contests and social gatherings will still provide ample opportunities to make friends. So, enjoy your life in this esteemed institute!<br>
+&emsp;&emsp;&emsp;&emsp;All in all, although there is a lot of pressure, the time you spend on our campus will be worthwhile and enhance your whole life. Hope you like it here.<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
      
 ## 004
 
-Dear Sir or Madam,
-    I bought an electronic dictionary from your online shore on January 1st, but after using it for a short period of time, I found it has some problems.
-    To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.
-    Therefore, I would like either to change for another model that works better or a full refund. You help is greatly appreciated.
+Dear Sir or Madam,<br>
+&emsp;&emsp;&emsp;&emsp;I bought an electronic dictionary from your online shore on January 1st, but after using it for a short period of time, I found it has some problems.<br>
+&emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary are so small that it is nearly impossible to type anything with them. Personally, I find this to be completely unacceptable.<br>
+&emsp;&emsp;&emsp;&emsp;Therefore, I would like either to change for another model that works better or a full refund. You help is greatly appreciated.<br>
 <p align="right">Yours sincerely</p>
 <p align="right">Zhang Wei</p>
 
 ## 005 
 
-Dear Professor Smith
-    On behalf of the Talents English Speech Contest Committee, I'm writing to invite you to be our new judge.
-    As the core of our Foreign Culture Festival. This school-wide contest is to be held in the students auditorium on May 12(next Sunday) and we believe that you can give our competitors some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor. 
-    Once again, we sincerely hope you can be the judge for our competition. 
+Dear Professor Smith<br>
+&emsp;&emsp;&emsp;&emsp;On behalf of the Talents English Speech Contest Committee, I'm writing to invite you to be our new judge.<br>
+&emsp;&emsp;&emsp;&emsp;As the core of our Foreign Culture Festival. This school-wide contest is to be held in the students auditorium on May 12(next Sunday) and we believe that you can give our competitors some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event will start at around 7p.m. and last for two hours at most. At the end of it, we will have some hand-made presents for each judge and competitor.<br>
+&emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge for our competition. 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+## 006
+
+Dear Professor Cook,<br>
+&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
+&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the Forbidden City, was the imperial(皇帝的) palace of the Ming and Qing Dynasties. It is also the largest piece of ancient Chinese architecture currently existing. MeanWhile, the Great Wall, symbolizing China's ancient civilization, is one of the world's most renowned projects. As the great creation of the ancient Chinese people and one of the wonders of the world, it was listed as one of the world cultural heritage sites in 1987.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your stay in our city.<br>
+<p align="right">Yours sincerely,</p>
+<p align="right">Li Ming</p>
+
+
