feat: update generate forgetting curve

--- a/postgraduate/word/simple-word/markdown/p6-p8.md
+++ b/postgraduate/word/simple-word/markdown/p6-p8.md
@@ -197,18 +197,18 @@
 - until
     - prep./conj.: Grammar, punctuation, and spelling can wait until you reverse.
     - till prep./conj. 直到（...为止）
-- card
-    - take card of 照顾，照料: It's the hardest thing to take care of a teenage.
+- care
+    - take care of 照顾，照料: It's the hardest thing to take care of a teenage.
     - care about/for 关心: We both care about/for needy workers.
     - medical care 医疗保健
     - careful, carefully, 
     - careless adj. 漠不关心的
 - close
-    - adj. 亲密的，亲近的: Helping you feel close and connected to people you care about...
+    - adj. 亲密的，亲近的: Helping you feel close and connected to people you care about... 帮助您与所关心的人建立亲密联系...
     - closely adv. 接近地
 - complete
-    - vt.: IQ tests ask you to complete verbal and visual analogies.
-    - adj. 完整的，完成的: But the intention is not to neglect social science; rather, the complete opposite.
+    - vt.: IQ tests ask you to complete verbal and visual analogies(类比). 智力测试要求你完成语言和视觉类比
+    - adj. 完整的，完成的: But the intention is not to neglect social science; rather, the complete opposite. 但我们的意图并不是忽视社会科学，而是完全相反。
 - decade
     - n. 十年
     - the better part of a decade 七八年
