--- a/postgraduate/word/simple-word/markdown/p12-p14.md
+++ b/postgraduate/word/simple-word/markdown/p12-p14.md
@@ -7,7 +7,7 @@
     - art-连接
     - n. 文章；（物品的）一件
     - 物品的一件
-        - ...instead of Shopping alone，one article of clothing at a time（次数）.
+        - ...instead of Shopping alone, one article of clothing at a time（次数）. 不要只买一件衣服，一次只买一件???
             - instead of == rather than 而不是（选择前边而不选择后边）
 - forest
     - n. 森林
@@ -17,7 +17,7 @@
     - 立即的，马上的
         - Because electronic payments(电子支付) are immediate，they eliminate(v.消除) the float for the consumer.
     - 直接的
-        - Interest rates have an immediate effect on the economy.
+        - Interest rates have an immediate effect on the economy(经济).
 - sell
     - v. 卖，出售
     - sell-sold-sold
@@ -32,11 +32,11 @@
     - n. 数量，总额（不可数）； vi 合计
     - number 可数
     - a large amount of 大量的: a large amount of personal data.
-    - amount to 合计，总计: Our debts amount to $1000.
+    - amount to 合计，总计: Our debts(债务) amount to $1000.
 - earn
     - vt. 赚得，获得
     - earn their living 谋生
-    - ...earned（获得） him a modest reputation
+    - ...earned（获得） him a modest reputation 这为他赢得了一个不错的名声
     - earnings n. 薪水；工资；收入
     - earner  n. 挣钱者
 - enjoy
@@ -61,9 +61,9 @@
 - store
     - vt. 储存，贮藏 n. 商店
     - 储存
-        - Many writers prudently store their data on disks.（磁盘）
+        - Many writers prudently(谨慎地) store their data on disks.（磁盘）
     - 商店
-        - The longer you stay in the  store，the more stuff（商品，货物） you’ll see，and the more stuff you see，the more you‘ll buy.
+        - The longer you stay in the store, the more stuff（商品，货物） you’ll see, the more you'll buy.
 - style
     - n. 风格；样式；类型
     - lifestyle 生活方式
@@ -84,7 +84,7 @@
 - air
     - n. 空气；天空；神态;
     - 神态,气场
-        - He is a musician with the air of kindness.
+        - He is a musician with the air of kindness. 他是个和善的音乐家
 - anyone
 - cancer
     - n. 癌症；
@@ -101,7 +101,7 @@
     - adj. 巨大的；伟大的
     - 大的 big == huge == large
     - n. 大公司
-        - ...where tech giants like Microsoft are being attracted ...
+        - ...where tech giants like Microsoft are being attracted... 微软等科技巨头被吸引到哪里
 - quickly
     - adv. 迅速地
     - quick adj. 迅速的
@@ -134,9 +134,9 @@
 - serious
     - adj. 严重的；重大的；严肃的；认真的
     - 认真的，严肃的（人）
-        - If we are serious about ensuring that our science...
+        - If we are serious about ensuring that our science... 如果我们真的想确保我们的科学...
     - 严重的，重大的（物）
-        - in the face of a serious threat
+        - in the face of a serious threat(威胁)
 - simple
 - someone
 - teach
@@ -184,7 +184,7 @@
 - worse
     - adj./adv. 更坏的
     - bad/badly/ill-worse-worst
-    - leaking patients' data is worse than selling it.
+    - leaking(泄漏) patients'(患者) data is worse than selling it.
 - zoo
 - story
     - n. 故事，小说；报道
@@ -201,7 +201,7 @@
         - If you head downhill（山下）
 - score
     - n. 分数，刻痕； vt. 得分；给...评分；刻痕于 vi. 得分，记分
-    - Many people scored worse on measures of fluid intelligence.
+    - Many people scored worse on measures of fluid intelligence. 许多人在流体智力方面的得分更差。
 - size
     - n. 尺寸，大小
     - assiss 评估
@@ -214,7 +214,7 @@
 - catch
     - vt. 抓住；赶上；感染；吸引；领会，听清楚
     - 吸引
-        - What is graphically(形象的) and explicitly(明确的) depicted in the simple yet eye-catching drawing is that ...
+        - What is graphically(形象的) and explicitly(明确的) depicted in the simple yet eye-catching drawing is that... 在简单而引人注目的图画中，以图形和明确的方式描绘的是
     - 赶上 catch up
         - while still catching up in some spheres of modern life... 在现代生活的某些领域仍在努力追赶
 - colleague
@@ -241,14 +241,14 @@
     - n. 比赛，竞争；种族  v. 赛速度；参加比赛
     - 洗完 face，系上 lace，迈开 pace，参加 race
     - 速度赛
-        - Parkrun is not a race but a time trail.
+        - Park run is not a race but a time trail.
     - n. 种族
         - ease(缓和) conflicts between races and classes(阶级)
 - rest
     - n. 其余的人或物    
     - for the rest of us 对于我们其他的人
     - vi. 依靠 rest on/upon 
-        - Good governance rests on an understanding of...
+        - Good governance rests on an understanding of... 良好的治理建立在对...的理解之上。
 - introduce
     - v. 介绍；引进
     - The gardens of the homeless introduce from into an urban environment. 无家可归者的花园将人们引入城市环境
@@ -366,7 +366,7 @@
     - n. 田地；运动场；领域
     - playing field 运动场
     - 领域
-        - Academic inquiry，at least in some fields，may need...
+        - Academic inquiry, at least in some fields, may need... 学术研究，至少在某些领域，可能需要...
 - chart
     - n. **图表**，航图，海图
 - email
@@ -389,7 +389,7 @@
         - see 强调看到的结果
         - watch 强调看的过程
     - watcher  n. ...观察家
-        - star watcher
+        - star watcher 明星观众
 - wonder
     - v. 对...感到疑惑； n. 惊异；奇迹
     - 疑惑，惊异
