--- a/postgraduate/word/simple-word/markdown/p18-p20.md
+++ b/postgraduate/word/simple-word/markdown/p18-p20.md
@@ -1,38 +1,43 @@
 # p18-p20
 
-- ocean 
-    - n. 海洋（远离陆地）；大量，许多（oceans of）
-    - sea（接近陆地）
+- ocean
+    - n. 海洋；(pl.)大量，许多(oceans of)
+    - sea vs ocean
+        - sea 接近陆地
+        - ocean 远离陆地
     - the Pacific 太平洋
     - the Atlantic 大西洋
     - the Arctic 北冰洋
     - the Indian 印度洋
 - poetry
-    - n. 诗歌，诗集
+    - n. 诗歌，诗集: This writer's poetry reflects his love of nature.
     - poet n. 诗人
     - poetic adj. 诗歌的，诗的
 - railroad/railway
     - n. 铁路
     - rail n. 栏杆；轨道；铁路
-    - ruller 尺子
+    - ruler 尺子
 - ready
     - adj. **准备好的**；乐意的；现成的
-    - readily adv. 简单地
+    - readily adv. 简单地，乐意地
 - six
 - wear
     - vt. 穿；戴；面带；**磨损**
-    - 磨损
-        - The stons have been worn smoothly by the constant flow of water.
+    - **磨损**
+        - The stones have been worn smoothly(顺利) by the constant flow of water.
     - wear-wore-worn
 - worry
-    - v. 担心（worry about）；n. 担心
-    - People in developing countries worry about migration（移民）.
+    - v. 担心；n. 担心
+    - worry about 担心
+    - People in developing countries <u>worry about</u> migration(移民).
         - immigration 移入民
         - emigration 移出民
 - zone
-    - n. 地区，区域（有固定边界）
-        - the new ultra-low（超低的）emission zone.
-    - area 地区（没有固定边界）
+    - n. 地区，区域
+    - the new ultra-low(超低的) emission(排放) zone.
+    - zone vs area 地区
+        - area 没有固定边界
+        - zone 有固定边界
 - beauty
     - n. 美丽
     - beautiful adj. 美丽的
@@ -44,7 +49,7 @@
 - channel
     - n. 渠道，途径；航道
     - Authors welcome the new channel for the publication.
-- confortable
+- comfortable
     - adj. 舒服的，闲适的
     - comfort n./v. 舒适；慰问
 - dollar
@@ -55,7 +60,7 @@
 - escape
     - vi. 逃跑； vt./n. 逃避，逃离
     - inescapably 不可避免的
-        - The law（法律） （the court shapes）is inescapably political.
+        - The law(法律) (the court shapes) is inescapably political.
 - fat
     - adj. 胖的；丰厚的
     - fat pay 丰厚的收入
@@ -64,40 +69,42 @@
     - heavy rain 瓢泼大雨
     - heavy traffic 繁重的交通
     - heavy heart 沉重的心
-    - （心情的沉重）
-        - ... makes heavy reading for publishers...
     - heavy industry 重工业
+    - ... makes heavy(心情的沉重) reading for publishers...
 - homeless
     - adj. 无家可归的
     - the homeless 无家可归的人
 - mile
-    - mil-千
+    - mil- 千
     - n. 英里
     - milestone n. 里程碑
 - native
-    - nat-出生
-    - adj. 出生地的；当地的
+    - nat- 出生
+    - adj. 出生地的；当地的；土著
 - north
 - obviously
     - adv. 明显地
     - **obvious**
         - adj. 明显的
-        - vi=vis -看
-        - Surely it should be obvious to the dimmest（人：笨的；物：昏暗的） executive...
+        - vi == vis- 看
+        - Surely it should be obvious to the dimmest(人：笨的；物：昏暗的) executive(管理人员)...
 - quarter
+    - qua- 4
     - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分
     - 四分之一
         - a quarter of web content
     - 一刻钟
         - in the third quarter
-    - 将... 四等分
-        - She peeled（剥皮） and quartered an apple.
+    - 将...四等分
+        - She peeled(剥皮) and quartered an apple.
     - quarterly adj. 季度的，每季的
 - rapid
     - adj. 快的，快速的
-    - fast （运动状态的快 a fast car）
-    - quick（动作迅速完成 quick look）
-    - **rapid** （正式的迅速 rapid change）
+    - rapid vs fast vs quick
+        - fast: 运动状态的快 a fast car
+        - quick: 动作迅速完成 quick look
+        - **rapid**: 正式的迅速 rapid change
+        - ![rapid vs fast vs quick](https://uy.wzznft.com/i/2025/08/17/i7iyfo.png)
 - round
     - adj. 圆的；取整数的 prep. 围绕；v. 环绕...而行；n. 回合；adv. 在周围，朝反方向的
     - prep. 围绕
@@ -105,7 +112,7 @@
     - v. 环绕...而行
         - We rounded the island at high speed.
     - n. 回合
-        - It launched a round of talks about how to save newspapers.
+        - It launched(启动) a round of talks about how to save newspapers.
     - 取整数的
         - round number of 2000
     - 朝反方向的
@@ -114,12 +121,12 @@
     - n. 卖方，销售者
 - smoke
     - n. 烟，烟尘； vi. 抽烟
-    - ...the smell of smoke，which might indicate the danger of fire.
+    - ...the smell(n. 气味) of smoke，which might indicate the danger of fire.
 - solar
     - adj. 太阳的，日光的
-    - sol-太阳；一个，单独
+    - sol- 太阳；一个，单独
     - Wind and solar power accounted for more than 10 percent.
-        - accounted for  占...比例（后边有数字）;解释
+        - **accounted for** 占...比例（后边有数字）；解释
 - strange
     - adj. 奇怪的，奇异的
 - thin
@@ -128,13 +135,15 @@
     - the thin air 稀薄的空气
 - total
     - adj. **全部的；完全的**；n. 总计
+- twenty
 - unlike
     - prep. 不像，和...不同
     - Unlike animals，we stand upright.
     - dislike v. 不喜欢
 - worst
     - adj./adv. 最坏的，最差的
-    - It was by far the worst speech he had ever made.
+    - bad, worse, worst
+    - <u>It was by far(到目前为止)</u> the worst speech he had ever made.
 - athlete
     - n. 运动员；体育家
 - black
@@ -147,75 +156,78 @@
     - adj. 繁忙的；热闹的
 - error
     - n. 错误，差错
-    - The top reason for the fake news phenomenon is "reade erro".
+    - The top reason for the fake news phenomenon(现象) is "reade error".
     - erroneous adj. 错误的
-        - ...reveal its erroneous nature（本质）.
+        - ...reveal(揭示) its erroneous nature(本质).
 - familiar
     - adj. 熟悉的；随便的，放肆的
     - unfamiliar 不熟悉的
-    - New skills and unfamiliar business models are needed too.
+    - New skills and unfamiliar business models are needed too. 还需要新的技能和不熟悉的商业模式
 - final
-    - fin-结束；范围
+    - fin- 结束；范围
     - adj. 最后的；决定性的
     - finally adv. 最终地，最后地
 - fine
     - adj. 极好的；好的；健康的； vt. 处以...罚金；n. 罚金
     - 罚金
-        - a $85000 fine and six months in prison.
+        - a $85000 fine and six months in prison(监狱).
 - front
     - n. 前面；领域
     - fashion front 时尚领域
     - the financial front 金融领域
 - hit
-    - v. 打，击；；到达
+    - v. 打，击；v. 到达
     - beat 打
     - 打击
-        - ...manufacturing has taken a significant hit during recent decades...
+        - ...manufacturing(制造业) has taken a significant(adj. 重要的; 显著的) hit during recent decades...
     - 到达
         - Many people hit middle age.
-    - hit-hit-hit-hitting
+    - hit, hit, hit, hitting
 - huge
     - adj. 巨大的，庞大的
     - hugely adv. 极度；非常；深深地；大大地
 - newly
     - adv. 最近地
+- newly
+    - adv. 最近，新近
 - panel
     - n. 面，板；专门小组，评判小组；仪表盘
     - solar panel 太阳能面板
     - board 木板，董事会
     - 专门小组，评判小组
-        - The latest was a panel from the National Academy of Sciences.
+        - The latest was a panel from the National Academy of Sciences. 最新的是来自国家科学院的一个小组
 - perfect
     - adj. 完美的
-    - perfectly adv. 完全地；非常；十分
-        - It is perfectly ordinary as you will see.
+    - perfectly adv. 完全地；非常；十分(== very)
+        - It is perfectly ordinary(普通的) as you will see.
 - piece
     - n. 片，块；vt. 拼合，拼凑
-    - a piece of + 不可数 n.
+    - **a piece of + 不可数 n.**
         - a piece of boiled beef/cake/cucumber
     - 拼合，整合 piece together
-        - Pearson has pieced together the work（研究成果） of hundreds of（数以百计的） researchers.
+        - Pearson has <u>pieced together</u> the work(研究成果) of <u>hundreds of(数以百计的)</u> researchers.
 - postal
     - adj. 邮政的，邮递的
 - pride
     - n. 自豪
     - take pride in 以...为豪
-        - Straitford，says Friedman，takes pride in its independent voice.
+        - Stratford, says Friedman, <u>takes pride in</u> its independent(独立的) voice.
     - proud adj. 自豪的 be proud of
-        - Straiford is most pound of its nonconformist（不墨守成规的）image.
+        - Stratford <u>is</u> most <u>pound of</u> its nonconformist(不墨守成规的) image.
 - province
-    - pro-向前
+    - pro- 向前
     - n. 省；领域，范围
 - quote
     - v. 引用，n. 引文，引语
     - 引用
         - The author quotes the example of our ancestors.
-    - 出现在阅读题题干是例证题标志
+    - 出现在阅读题题干是例证题标志(cite)
     - quota n. 定额
 - rail
+    - n. 栏杆，铁路
 - retailer
     - n. 零售商，零售店
-    - retail  v./n. 零售 adj. 零售的
+    - retail v./n. 零售 adj. 零售的
         - It originally retailed at $23.50.
 - secret
     - adj. 秘密的，机密的
@@ -225,49 +237,54 @@
     - adv. 突然，猛然
     - sudden adj. 突然的，意外的
 - tie
-    - vt. 栓，扎；使有联系； n. 联系；**平局** vi. **不分胜负**
-    - be tied to 与... 相关
-        - "A substantial part" of executive pay is now tied to performance.
+    - vt. **栓，扎**；使有联系； n. 联系；**平局** vi. **不分胜负**
+    - be tied to 与...相关
+        - "<u>A substantial(重大的，大量的) part(很大一部分)</u>" of executive(管理人员) pay is now tied to performance(
+          表现 -> 业绩).
 - verbal
-    - adj. **口头的；用文字的**；动词的
+    - adj. **口头的；用文字的**；动词的(verb)
 - voice
 - walk
 - winner
+    - n. 获胜的人，优胜者
 - actor
     - n. 男演员；行动者
 - ahead
     - adv. 在前面；向前；提前，预先
-    - planning ahead should eliminate wastage...
+    - Planning ahead should eliminate(排除, 消除) wastage(浪费)...
 - apparently
     - adv. 显然地
-    - He paused，apparently lost in thought.
- - born
+    - He paused, apparently lost in thought. 他停顿了一下，显然陷入了沉思
+- born
     - adj. 天生的（往往用于被动语态、过去时）
 - buyer
     - n. 买主，买方
+    - seller 卖方，销售
 - cold
     - adj. 寒冷的；冷淡的； n. 感冒；寒冷
+    - I have got a cold
 - everyday
-    - adj. 每天的，日常的
-        - Many everyday tasks take a surprising toll on the environment.    
-    - every day  adv.
-        - We unconsciouly imitate the behavior we see ever day.
+    - adj.(+n.) 每天的，日常的
+        - Many everyday tasks take a surprising toll on the environment.
+            - take toll on 对...造成损害
+    - every day adv.
+        - We unconsciously(无意识的) imitate(模拟) the behavior we see ever day.
 - fruit
-    - n. 水果；成果
-    - fruitless  没有成果的
+    - n. 水果；**成果**
+    - fruitless 没有成果的
 - gas
     - n. 气体；煤气；汽油
     - gas station 加油站
-    - greenhouse gas 温室气体
+    - greenhouse gases 温室气体
 - glass
-    - n. 玻璃；pl. 眼镜
+    - n. 玻璃；(pl. glasses) 眼镜
 - hide
     - vt. 隐藏，躲藏
 - host
     - n. 主人，东道主；许多
-    - 许多  a host of 
-        -  Huges can bring a host of health benefits to your body and mind.
-- humor/ humour
+    - 许多 a host of
+        - Hugs(拥抱) can bring <u>a host of</u> health benefits to your body and mind.
+- humor/humour
     - n. 幽默，诙谐
     - sense of humor 幽默感
     - sense of happiness 愉悦感
@@ -275,23 +292,25 @@
     - sense of responsibility 责任感
 - hurt
     - vt. 使...伤心；伤害； n. s伤害
-    - I have hurted her heart.
+    - I have hurt her heart.
 - mode
     - n. 方式，样式
 - nor
     - conj./adv. 也不
     - neither nor 既不...也不
-- ought
-    - modalv. 应该
+        - We <u>neither</u> understand <u>nor</u> respect each other.
+- ought to
+    - modal v. 应该
 - reply
     - ply- 重叠
     - v./n. 回答；答复
     - I am looking forward to you reply.
 - smart
     - adj. 聪明的；智能的
+    - smart phone
 - software
     - n. 软件
-    - hardware 硬件
+    - hardware n. 硬件
 - spirit
     - spir- 呼吸
     - n. 精神
@@ -300,11 +319,12 @@
     - cooperative spirit 合作精神
     - innovative spirit 创新精神
         - nov- 新
+            - novel adj. 新颖的
 - star
 - thirty
 - urban
     - urb- 城市
-        - suburb 城郊的
+        - suburb adj. 城郊的
     - adj. 城市的
     - rural adj. 农村的
 - wholesaler
@@ -317,7 +337,7 @@
         - donate v. 赠送
     - n. 日期；约会
     - out of date 过时
-        - But the discussions now seem out of date.
+        - But the discussions now seem <u>out of date</u>.
     - outdated adj. 过时的；陈旧的（在阅读题选项中经常是错误选项）
     - update vt. 更新，使现代化； n. 最新报告
 - again
@@ -325,12 +345,12 @@
 - artist
     - n. 艺术节；美术家
 - ceremony
-    - n. 仪式，典礼 = ritual
+    - n. 仪式，典礼 == ritual
     - graduation ceremony
 - chain
     - n. 链条；**连锁店**
     - 连锁店
-        - The ruling is a victory for big chains with a presence in many states.
+        - The ruling is a victory(胜利) for big chains with a presence(在场) in many states. 这一裁决是许多州大型连锁企业的胜利
 - chairman
     - n. 主持人；主席
 - cook
@@ -351,7 +371,7 @@
 - famous
     - adj. 著名的，出名的
     - fame n. 名声；声誉
-    - Their pursuits are not fame or wealth.
+        - Their pursuits(追求) are not fame or wealth.
 - forever
     - adv. 永远地；始终
     - New technology has been eating jobs forever.
@@ -363,8 +383,8 @@
     - family n. 家庭
 - infant
     - fant- 说话
-    - n. 婴儿；  adj. 婴儿的
-    - infancy  n. 婴儿期；幼儿园
+    - n. 婴儿； adj. 婴儿的
+    - infancy n. 婴儿期；幼儿园
 - inside
     - prep./adv./n./adj. 里面
     - the inside of your bedroom
@@ -373,6 +393,7 @@
     - queen n. 女王
 - latter
     - adj. 后者的； n. 后者
+    - late, latter
 - leisure
     - n. 空闲时间；悠闲
     - leisure time
@@ -380,22 +401,22 @@
     - n. 膳食；一餐；一顿饭
 - motion
     - mot- 动
-    - n. 运动；移动 （不可数）
+    - n. 运动；移动（不可数）
 - neither
     - adv. 两者都不
     - neither nor 既不...也不
-    - either ...or 要么..要么
+    - either...or 要么..要么
 - night
 - ordinary
     - adj. 普通的；平凡的
-    - The journalist must understand the law more profoundly（深刻地，深奥地）than an ordinary citizen.
+    - The journalist(记者) must understand the law more profoundly(深刻地，深奥地) than an ordinary citizen(公民).
     - common 普通的
     - extraordinary adj. 非凡的，卓越的
 - partner
     - n. 配偶；搭档；合伙人
 - quota
     - n. 定额；限额
-    - Norway adopted a nationwide corporate gender quota.
+    - Norway adopted(采用) a nationwide corporate(公司的) gender quota. 挪威采取了全国性的公司性别配额
 - soccer
     - n. 足球
     - association football 足球
