--- a/postgraduate/word/simple-word/markdown/p15-p17.md
+++ b/postgraduate/word/simple-word/markdown/p15-p17.md
@@ -11,18 +11,18 @@
     - 会议记录
         - He'd been reading the **minutes** of the last meeting.
     - adj. 微小的，极少的
-        - The leaf surface contains numbers of minute openings.
+        - The leaf surface(表面) contains numbers of minute openings.
 - monkey
 - thousand
     - n. 一千 pl. 许许多多，成千上万
 - warn
     - v. 警告，告诫
     - warn of 发出...的警告
-        - ...to warn of the doom(厄运) of biomedical research.
+        - ...to warn of the doom(厄运) of biomedical(生物医学) research.
     - warning n. 警告，告诫
 - wealth
     - n. 财富，丰富
-    - unfair wealth distribution
+    - unfair wealth distribution 
     - wealthy
         - A few wealthy people will own all the capital(资本).
 - alone
@@ -61,7 +61,7 @@
     - **把...放入**，发布，公布
         - I started posting them on Twitter.
     - 带来
-        - It would post a challenge to its farming industry.
+        - It would post a challenge to its <u>farming industry(农业产业)</u>.
     - 邮递
         - I'll send the original(起源的) to you by post.
     - postal adj. 邮政的，邮递的
@@ -72,7 +72,7 @@
     - n. 天气，气象；v. 经受住，平安渡过
     - sunny weather
     - v. 经受住
-        - to help families weather bad times
+        - to help families weather bad times(时期)
 - widely
     - adv. 普遍地，广泛地
 - attempt
@@ -95,7 +95,7 @@
         - go to church 礼拜
         - go to the church 去教堂
     - Church 教派，教会
-        - On the issue of freedom of religion and the position of the Church...
+        - On the issue of freedom of religion(宗教) and the position of the Church...
         - A of B of C C的B的A
 - deep
     - adj. 深的；深刻的，深奥的
@@ -105,7 +105,7 @@
 - hire
     - vt. 雇佣；租用
     - 聘请
-        - Hire a personal stylist.
+        - Hire a personal stylist(设计师).
     - fire
 - pain
     - n. 痛苦，疼痛
@@ -117,7 +117,7 @@
 - royal
     - adj. 皇家的，王室的
     - aristo-贵族的
-    - aristocratic 贵族的
+    - aristocratic [əˌrɪstəˈkrætɪk] 贵族的
 - secretary
     - cert- 搞清
     - n. 秘书，大臣，部长
@@ -144,7 +144,7 @@
 - stage
     - n.**阶段**；舞台； vt. 上演，举办
     - 舞台
-        - The actors of the RSC imitate(模拟) Shakespeare on and off stage.
+        - The actors of the RSC imitate(模拟) Shakespeare(莎士比亚) on and off stage.
     - 阶段
         - Our species(n. 物种) has reached the highest stage of evolution(n. 进化).
 - sun
@@ -159,17 +159,17 @@
 - editor
     - n. 编辑，编者
     - edit vt. 编辑；剪辑
-        - Moral(道德) awareness(意识) matters in editing a newspaper.
+        - Moral(道德) awareness(意识) matters in editing a newspaper. 道德意识在编辑报纸时很重要
     - edition n. 版本
 - fuel
     - n. 燃料；v. 给...加燃料
     - v. 给...加燃料
-        - You'd think this might fuel the efficiency mind.
+        - You'd think this might fuel the efficiency(效率) mind. 你可能会认为这会促进效率思维
 - mail
     - n. 邮件
 - match
     - n. 匹配，比赛
-    - Few culinary(否、烹饪的) pleasures can match it.
+    - Few culinary(否、烹饪的) pleasures can match it. 很少有美食能与之媲美
 - root
     - n. 根部 v. 生根
     - take root in 扎根于
@@ -196,9 +196,9 @@
     - vi. 到达；来临 （区别reached vt.）
     - arrive vs reach
         - reach vt.: I have reached my school.
-        - arrive vi. + prp.
+        - arrive vi. + prep.
     - arrive in + 某个范围: arrive in ChangChun
-    - arrive at + 具体的地点: arrive in ChangChun station
+    - arrive at + 具体的地点: arrive at ChangChun station
     - arrive at/in 达到，达成
         - It took us several hours to arrive at decision.
     - arrival n. 到达者，到达
@@ -256,7 +256,7 @@
 - manner
     - n. 态度，举止；风度；方法，方式
     - man- 手
-    - His manner can best be described as being frank(坦率).
+    - His manner can best be described as being frank(坦率). 他的作风可以说是最坦率的
     - in a manner 以一种方式
 - nowadays
     - adv. 现今，现在
@@ -282,7 +282,7 @@
 - tough
     - adj. 困难的；强硬的；强壮的
     - 强硬的
-        - It needs tougher enforcement.
+        - It needs tougher enforcement. 它需要更严厉的执法
     - 困难的
         - Think about how tough it is to get together 15 people.
 - welcome
@@ -302,7 +302,7 @@
     - vi. 抱怨，诉苦
     - People complained that buses were late and infrequent(罕见).
     - complaint n. 抱怨
-        - Students have voiced their complaints about homework.
+        - Students have <u>voiced their complaints</u> about homework.
         - voice one's complaint 说明某人的抱怨
 - couple
     - n. 夫妻；几个，一些（a couple of）
@@ -314,7 +314,7 @@
     - look forward to 期望
         - I am looking forward to your reply.
     - put forward 提出
-        - gerbert Spencer put forward his own theory(理论) of cultural evolution(进化).
+        - Gerbert Spencer put forward his own theory(理论) of cultural evolution(进化).
     - adj. 向前的
         - The court's ruling is a step forward(向前的一步) in the struggle(斗争) against corruption(腐败).
     - vt. 转递
@@ -343,9 +343,9 @@
         - Meanwhile，it has more than $120 billion...
     - **mean**
         - v. **意味着**
-            - This can mean millions more in revenue(收入).
+            - This can mean millions more in revenue(收入). 这意味着更多的收入
         - n. **平均值** == average
-            - ... 12-15 points above the mean value.
+            - ... 12-15 points above(多于) the mean value.
         - adj. 吝啬的，小气的
             - She is a mean old woman.
         - mean, meant, meant, meaning
@@ -355,7 +355,7 @@
     - 药物
         - The program has provided enough food and medicine.
     - 医学
-        - Modern medicine has prolonged the physical agony of dying.
+        - Modern medicine has prolonged the physical agony of dying. 现代医学延长了死亡的肉体痛苦
     - medical adj. 医疗的，药物的
 - party
     - n. **党派**，政党；**当事人**；聚会
@@ -436,7 +436,7 @@
         - permit 允许
         - emit 排放
     - 允许...进入（被动）
-        - Suppose your cousin(表哥) LiMing has just <u>been admitted</u> to a university.
+        - Suppose(假设) your cousin(表哥) LiMing has just <u>been admitted</u> to a university.
     - 承认（主动）
         - Researchers admit that their study does not answer the question...
     - **admission** n. 允许进入；承认
