--- a/postgraduate/word/simple-word/markdown/p9-p11.md
+++ b/postgraduate/word/simple-word/markdown/p9-p11.md
@@ -78,8 +78,8 @@
     - gap year
 - journal
     - n. 杂志，期刊
-- nearly
-    - adv. 整洁的，干净的: You should write nearly on the ANSWER SHEET.
+- neatly
+    - adv. 整洁的，干净的: You should write neatly on the ANSWER SHEET.
 - next
 - already
     - adv. 早已，已经: The French measures have already. 法国的措施已经生效
@@ -110,7 +110,7 @@
     - train n. 火车 v. 训练，培养
 - action
 - beyond
-    - prep. 越出，远于: It is essential to consider factors beyond GDP.
+    - prep. 越出，远于: It is essential to consider factors beyond GDP. 必须考虑GDP以外的因素
 - full 
     - adj. 
     - fill v. 填满
@@ -129,7 +129,7 @@
             - talk about sth.
         - speak/say/talk Hello
         - speak/say/talk Chinese 
-        - speak/say/talk about the phenomenon 
+        - speak/say/talk about the phenomenon(现象) 
     - spoke, spoken
     - speaker n. 演讲者，扬声器
 - water
@@ -303,7 +303,7 @@
 - shop
 - slow
 - either
-    - adj. （两者之中）任一的，每一的。修饰单数名词: Either classmate shou get respect.
+    - adj. （两者之中）任一的，每一的。修饰单数名词: Either classmate should get respect.
     - adv. 也（用于否定句中）: I don't know either.
         - also 用于肯定句中
     - prep. （两者之中）任何一个: You may take either of the two.
